--- a/templates/pipeline.yaml
+++ b/templates/pipeline.yaml
@@ -138,9 +138,16 @@ Parameters:
             When pressed the button will send the entered string to the bot as a help message.  If left empty
             the help button will be disabled.
 
+    GetCodeFromS3:
+        Type: String
+        Default: Thumbs up
 Conditions:
     NeedsParentOrigin: !Equals [!Ref ParentOrigin, '']
     ShouldCleanupBuckets: !Equals [!Ref CleanupBuckets, true]
+    ShouldUseBootstrapBucket: !Equals 
+    - !Ref GetCodeFromS3
+    - true
+    DontUseBootstrapBucket: !Not [Condition: ShouldUseBootstrapBucket]
 
 Resources:
     # Bucket where S3 access logs are stored
@@ -512,7 +519,11 @@ Resources:
         Type: Custom::S3Cleanup
         Condition: ShouldCleanupBuckets
         Properties:
-            ServiceToken: !GetAtt S3CleanupLambda.Arn
+            ServiceToken: !If
+                - ShouldUseBootstrapBucket
+                - !GetAtt S3CleanupLambda.Arn
+                - !GetAtt S3CleanupLambda1.Arn
+
             Buckets:
                 - !Ref ArtifactStore
                 - !Ref WebAppBucket
@@ -524,11 +535,23 @@ Resources:
     # Lambda function for custom resource
     S3CleanupLambda:
         Type: AWS::Lambda::Function
-        Condition: ShouldCleanupBuckets
+        Condition: ShouldUseBootstrapBucket
         Properties:
             Code:
                 S3Bucket: !Ref CustomResourceCodeBucket
                 S3Key: !Ref CustomResourceCodeObject
+            Handler: s3-cleanup.handler
+            Role: !GetAtt S3CleanupLambdaRole.Arn
+            Runtime: python3.7
+            Timeout: 120
+            TracingConfig:
+                Mode: Active
+
+    S3CleanupLambda1:
+        Type: AWS::Lambda::Function
+        Condition: DontUseBootstrapBucket
+        Properties:
+            Code: ./custom-resources
             Handler: s3-cleanup.handler
             Role: !GetAtt S3CleanupLambdaRole.Arn
             Runtime: python3.7
