--- a/src/config/lex-web-ui-loader-config.json
+++ b/src/config/lex-web-ui-loader-config.json
@@ -1,1 +1,55 @@
-{}
+{
+    "region": "us-west-2",
+    "cognito": {
+      "poolId": "us-west-2:5ad87c5e-62bb-4c04-8a9b-db05554a2876",
+      "aws_cognito_region": "us-west-2",
+      "region": "us-west-2"
+    },
+    "lex": {
+      "botName": "RobinChatbot",
+      "initialText": "",
+      "initialSpeechInstruction": "Say 'Hey Robin' to get started.",
+      "initialUtterance": "english",
+      "region": "us-west-2",
+      "retryOnLexPostTextTimeout": false,
+      "retryCountPostTextTimeout": 1,
+      "v2BotId": "",
+      "v2BotAliasId": "",
+      "v2BotLocaleId": ""
+    },
+    "ui": {
+      "parentOrigin": "http://localhost:8000",
+      "toolbarTitle": "Do I Qualify?",
+      "toolbarLogo": "",
+      "positiveFeedbackIntent": "",
+      "negativeFeedbackIntent": "",
+      "helpIntent": "help",
+      "enableLogin": false,
+      "forceLogin": false,
+      "AllowSuperDangerousHTMLInMessage": true,
+      "shouldDisplayResponseCardTitle": false,
+      "minButtonContent": "Do I Qualify?",
+      "hideInputFieldsForButtonResponse": true,
+      "pushInitialTextOnRestart": false,
+      "directFocusToBotInput": false,
+      "showDialogStateIcon": false,
+      "backButton": false,
+      "messageMenu": false,
+      "hideButtonMessageBubble": true,
+      "saveHistory": false,
+      "textInputPlaceholder": "Type Here"
+    },
+    "polly": {
+      "voiceId": "Salli"
+    },
+    "recorder": {
+      "enable": false,
+      "preset": "speech_recognition"
+    },
+    "iframe": {
+      "iframeOrigin": "http://localhost:8000",
+      "shouldLoadIframeMinimized": true,
+      "iframeSrcPath": "/index.html#/?lexWebUiEmbed=true"
+    }
+  }
+  
