--- a/lex-web-ui/package.json
+++ b/lex-web-ui/package.json
@@ -18,6 +18,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "aws-sdk": "^2.875.0",
     "core-js": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
