--- a/lex-web-ui/package.json
+++ b/lex-web-ui/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "aws-sdk": "^2.875.0",
     "core-js": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
@@ -31,6 +33,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -41,6 +44,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.1",
     "vue-template-compiler": "^2.6.11",
     "worker-loader": "^3.0.8"
   },
