--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jsonwebtoken": "^8.5.1",
     "material-design-icons": "^3.0.1",
     "regenerator-runtime": "^0.13.5",
+    "require": "^2.4.20",
+    "requirejs": "^2.3.6",
     "roboto-fontface": "^0.10.0",
     "vue": "^2.6.12",
     "vuetify": "^2.5.0",
