--- a/templates/codebuild-deploy.yaml
+++ b/templates/codebuild-deploy.yaml
@@ -467,6 +467,8 @@ Resources:
                       Value: !Ref ShouldLoadIframeMinimized
                     - Name: SHOW_RESPONSE_CARD_TITLE
                       Value: !Ref ShowResponseCardTitle
+                    - Name: DOMAIN_MATCH_ON_LINK_CLICK
+                      Value: !Ref DomainMatchOnLinkClick
                     - Name: PARENT_ORIGIN
                       Value: !If
                         - NeedsParentOrigin
